Fix overlapping field highlights on product detail
Fixes #49

--- a/packages/reaction-commerce/client/templates/products/productDetail/attributes/attributes.import.less
+++ b/packages/reaction-commerce/client/templates/products/productDetail/attributes/attributes.import.less
@@ -1,10 +1,12 @@
 .pdp-container {
   .metafield-list-item, .metafield-new-item {
-    min-height: 40px;
+    .row {
+      padding: 5px 3px 5px;
+    }
+    padding: 5px 3px 5px;
     cursor: pointer;
     input {
-      padding: 5px;
-      margin-top: -5px;
+      width: 48%;
     }
   }
   .metafield-remove {
